@@ -12,7 +12,6 @@ med prio
 - HACK000C Workaround for code trying to access non-existent buttons
 - TODO000B Some values in MovementNoise() can wrap and then produce incorrect results
 - TODO000D In PickRandomPassengerFromVehicle() using MercPtrs[ubChosenMerc] is probably wrong (should choose from the ubChosenMerc found mercs, not from the first ubChosenMerc mercs)
-- TODO000E In SayBattleSoundFromAnyBodyInSector() using MercPtrs[ubChosenMerc] is probably wrong (should choose from the ubChosenMerc found mercs, not from the first ubChosenMerc mercs)
 - TODO000F Only half of the data gets saved/loaded
 - TODO0011 gubAnimCrawlSpeeds[] is only declared, gubAnimCrawlingSpeeds[] is never referenced, looks like a typo
 
